# Socartes

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  scripts.js  styles.css
backend/socartes_backend/: __init__.py  agents.py  app.py  knowledge.py  models.py  story_rag.py
experiments/: README.md  full_novel_eval.py
experiments/data/: haunted_pajamas_33780.txt
experiments/results/: full_novel_eval.json
reports/: gpt55-vs-rag-haunted-pajamas.md  socartes-paper-merged.docx
reports/figures/: fig1-agent-architecture.html  fig4-question-outcomes.html
tests/: test_backend_api.py  test_backend_orchestrator.py  test_story_rag.py
