[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "socartes"
version = "0.1.0"
description = "Independent Socartes prototype with frontend and agentic backend."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["socartes_backend*"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
